infrastructure/traefik/config/traefik-external-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-external-basicauth
spec:
  basicAuth:
    secret: traefik-external-basicauth
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mmontes.duckdns.org`)
      middlewares:
        - name: traefik-external-basicauth
      services:
        - name: api@internal
          kind: TraefikService
