infrastructure/traefik/config/traefik-internal-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal
spec:
  ingressClassName: traefik-internal
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mmontes-internal.duckdns.org`)
      services:
        - name: api@internal
          kind: TraefikService
